Port webnail to Java 11   * There were just a couple of minor changes due to depracated     Java APIs  (use of keystrokes to set accelerators)