@@ -1,14 +1,14 @@
 @echo off
 if -%1-==-- (
-    javaw -jar WEBNAIL_DIR/webnail.jar
+    javaw -p BZDEV_DIR --add-modules org.bzdev.desktop -classpath WEBNAIL_DIR/webnail.jar webnail/Webnail
 ) else (
     if %1==--gui  (
             if not -%2-==-- (
-                javaw -jar WEBNAIL_DIR/webnail.jar %*
+                javaw -p BZDEV_DIR --add-modules org.bzdev.desktop -classpath WEBNAIL_DIR/webnail.jar webnail/Webnail %*
 	    ) else (
-	        java -jar WEBNAIL_DIR/webnail.jar %*
+	        java -p BZDEV_DIR --add-modules org.bzdev.desktop -classpath WEBNAIL_DIR/webnail.jar webnail/Webnail %*
             )
     ) else (
-        java -jar WEBNAIL_DIR/webnail.jar %*
+        java -p BZDEV_DIR --add-modules org.bzdev.desktop -classpath WEBNAIL_DIR/webnail.jar webnail/Webnail %*
     )
 )
